# IL2C

./: .gitattributes  .gitignore  Arduino.properties  Directory.Build.props  LICENSE  NuGet.config  README.md  appveyor.yml  azure-pipelines.yml  build-runtime.bat  build-runtime.sh  build-tools-pack.bat  circle.yml  il2c.pack.sln  il2c.sln  il2c.sln.licenseheader  il2c.vs2017.sln  il2c.vs2017_old.sln  init-tools.bat  init-tools.sh  library.properties  make-runtime.bat  pack.bat  pack.sh  sample-translation-results.md  supported-basic-types.md  supported-opcodes.md  supported-runtime-system-features.md  supported-runtime-types.md  supported-types.md  supported-typesystem-features.md  version.json
IL2C.Runtime/src/: CMakeLists.txt  debugbreak.h  il2c.c  il2c_private.h
IL2C.Runtime/src/Core/: il2c.c  il2c_allocator.c  il2c_debug.c  il2c_exception.c  il2c_gc.c  il2c_thread.c
IL2C.Runtime/src/Platform/: arduino.h  debugbreak.h  fmod.c  gcc.h  heap.c  heap.h  linux.c  linux.h  msvc.h  no-threading.c  no-threading.h  pthread.h  strings.h  uefi.c  uefi.h  uefi_Win32.asm  uefi_x64.asm  wdm.c  wdm.h  windows.c  windows.h
IL2C.Runtime/src/Platform/efi/: efi.h  efi_nii.h  efichar.h  eficonsctl.h  efidef.h  efinet.h  efipart.h  efipciio.h  efipxebc.h  efiser.h  efistdarg.h  efiuga.h
IL2C.Runtime/src/Private/: arduino.h  arduino_all.c  arduino_all.h  azuresphere.c  debugbreak.h  freertos.h  gcc_linux.c  gcc_linux.h  gcc_linux_azuresphere.c  gcc_win32.c  gcc_win32.h  heap.h  linux.h  msvc_uefi.c  msvc_uefi.h  msvc_uefi_x64.asm  msvc_wdm.c  msvc_wdm.h  msvc_win32.c  msvc_win32.h  no-threading.h  pthread.c  pthread.h  strings.c  uefi.c  uefi.h  uefi_Win32.asm  wdm.h  windows.c  windows.h
IL2C.Runtime/src/Private/efi/: efi.h  efifpswa.h  efigop.h
IL2C.Runtime/src/System/: AppDomain.c  Array.c  Boolean.c  Byte.c  Char.c  Console.c  Delegate.c  Double.c  Enum.c  Exception.c  GC.c  IDisposable.c  IFormatProvider.c  IndexOutOfRangeException.c  Int16.c  Int32.c  Int64.c  IntPtr.c  InvalidCastException.c  MulticastDelegate.c  Object.c  SByte.c  Single.c  String.c  Type.c  UInt16.c  UInt32.c  UInt64.c  UIntPtr.c  UnhandledExceptionEventArgs.c  ValueType.c
IL2C.Runtime/src/System/Threading/: Interlocked.c  Monitor.c  ParameterizedThreadStart.c  Thread.c  ThreadStart.c
gcc/: test.c  (+2 more)
samples/Calculator/Calculator.CMake/: CMakeLists.txt  build.bat  build.sh  main.c
src/IL2C.Runtime/src/: CMakeLists.txt  _main_template.c_  il2c_private.h
tests/IL2C.Core.Test.Fixture/Templates/: CMakeLists.txt  launch.json  make.bat  make_libil2c.bat  test.c  test.vcxproj  test_void.c
(+1496 files in other folders)
